The configuration file was updated to reflect changes in how news and announcements are handled

--- a/_config.yml
+++ b/_config.yml
@@ -170,8 +170,13 @@ collections:
     output: true
     permalink: /projects/:path/
 
-news_scrollable: false # adds a vertical scroll bar if there are more than 3 news items
-news_limit: 3 # leave blank to include all the news in the `_news` folder
+announcements:
+  enabled: true
+  scrollable: false # adds a vertical scroll bar if there are more than 3 news items
+  limit: 3 # leave blank to include all the news in the `_news` folder
+
+# news_scrollable: false # adds a vertical scroll bar if there are more than 3 news items
+# news_limit: 3 # leave blank to include all the news in the `_news` folder
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
